--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
   </body>
   <footer>
     <div class="bottomright">
-      <a href="https://github.com/GaukeT" target="_blank" title="GitHub">
+      <a rel="noopener" href="https://github.com/GaukeT" target="_blank" title="GitHub">
         <i class="fa fa-github" aria-hidden="true"></i>
       </a>
-      <a href="https://nl.linkedin.com/in/gauketeijema" target="_blank" title="LinkedIn">
+      <a rel="noopener" href="https://nl.linkedin.com/in/gauketeijema" target="_blank" title="LinkedIn">
         <i class="fa fa-linkedin" aria-hidden="true"></i>
       </a>
     </div>
